[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Alexander Berezhnoy <alexander.berezhnoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3.1"
base64 = "0.10.1"
maplit = "1.0.2"
lazy_static = "1.4.0"